# Llamas

./: CMakeLists.txt  Install.sh  Install.sh~  Makefile.win  README.md  Settings.txt  grid.cpp  grid.h  llamas.dev  llamas.layout  main.cpp  progressbar.h  sdl2.mak  server.cpp  tcputil.h
SDL2_gfx-1.0.1/: Makefile  config.status  libSDL2_gfx.la  libtool
SDL2_gfx-1.0.1/.deps/: SDL2_framerate.Plo  SDL2_gfxPrimitives.Plo  SDL2_imageFilter.Plo  SDL2_rotozoom.Plo
SDL2_gfx-1.0.1/.libs/: libSDL2_gfx-1.0.so.0.0.1  libSDL2_gfx.lai
SDL2_gfx-1.0.1/autom4te.cache/: output.0  requests  traces.0
cmake_module/: FindSDL2_TFF.cmake~  FindSDL_TTF.cmake
